[package]
name = "leveldb-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
rocksdb = "0.22.0"
log = "0.4.21"
arrayref = "0.3.6"
bincode = "1.3.1"
bitcoin = { version = "0.31", features = [ "serde" ] }
elements = { version = "0.24", features = [ "serde" ], optional = true }
serde = { version = "1.0.202", features = ["derive"] }
byteorder = "1.5.0"